@@ -5721,4 +5721,7 @@ name)/mark
 /A[\8]B[\9]C/
     A8B9C
 
+/(?1)()((((((\1++))\x85)+)|))/
+    \x85\x85
+
 # End of testinput1 
