@@ -4294,6 +4294,8 @@ a random value. /Ix
 
 /.((?3)(?R)()(?2)|\1|$)()/B
 
-/(?1)()((((((\1++))\x85)+)|))/
+/(\9*+(?2);\3++()2|)++{/
+
+/\V\x85\9*+((?2)\3++()2)*:2/
 
 # End of testinput2 
