@@ -106,6 +106,11 @@ subroutine call, for example /.((?2)(?R)\1)()/, pcre2_compile() failed to
 compile correct code, leading to undefined behaviour or an internally detected 
 error. This bug was discovered by the LLVM fuzzer.
 
+27. Quantification of certain items (e.g. atomic back references) could cause 
+incorrect code to be compiled when recursive forward references were involved. 
+For example, in this pattern: /(?1)()((((((\1++))\x85)+)|))/. This bug was
+discovered by the LLVM fuzzer.
+
 
 Version 10.10 06-March-2015
 ---------------------------
